src/components/ciConfig/CIConfig.scss
.white-card__docker-config {
    padding: 20px 24px 12px 24px;
    .form-row {
        margin-bottom: 24px;
    }
    .form-row__key-value {
        display: grid;
        grid-template-columns: 50% 1fr;
        grid-column-gap: 16px;
    }
    .form-row__add-parameters {
        display: flex;
        justify-content: space-between;
        align-items: center;
        .add-parameter {
            .fa.fa-plus {
                margin-right: 4px;
            }
            color: var(--B500);
            text-align: right;
        }
    }
    .form-row__docker {
        display: grid;
        grid-template-columns: 240px 1fr;
        grid-column-gap: 16px;
        .popup-button {
            height: 40px;
        }
        .select-popup {
            width: 240px;
        }
        .form__field {
            margin-bottom: 16px;
            .bottom-0 {
                bottom: 0;
            }
            .docker-flie-container {
                display: flex;
                .checkout-path-container {
                    padding: 8px 10px;
                    background: var(--N100);
                    border-radius: 4px 0 0 4px;
                    border: 1px solid var(--N200);
                    border-right: none;
                    max-width: 200px;
                    overflow: hidden;
                    text-overflow: ellipsis;
                }
                .file-name {
                    border-radius: 0 4px 4px 0;
                }
            }
        }
        .form__error {
            position: unset;
            display: flex;
            align-items: center;
            margin-top: 4px;
            &.form__error--info {
                color: #6b778c;
                &:before {
                    content: '';
                    background: url('../../assets/icons/ic-info-warn.svg');
                    height: 14px;
                    width: 14px;
                    display: inline-block;
                    background-size: contain;
                    margin-right: 4px;
                }
            }
        }
    }
    .popup-button {
        .select-button {
            height: 40px;
            padding-left: 10px;
        }
    }
    .target-platform__select__multi-value__label {
        font-size: 12px;
        padding: 2px;
        padding-left: 6px;
    }
}
.docker__dropdown {
    margin: auto;
    margin-right: 0;
    margin-top: 0;
}

